Redid layout with tables, fixed other layout issues. Needs cleanup

--- a/app/assets/stylesheets/_fonts.css.scss
+++ b/app/assets/stylesheets/_fonts.css.scss
@@ -93,5 +93,5 @@
 @font-face
 {
     font-family: "Segoe UI bold";
-    src: url(font-path('segoeuib.ttf'));
+    src: url(font-path('segoeuib.ttf?#iefix'));
 }
