--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -77,17 +77,11 @@
 		border-top: "1px solid white";	
 	}
 
-	#aboutPanelContent
+	#aboutTable
 	{
-		margin: 0px auto 0px auto;
-		width: 80%;
+		margin-left: auto;
+		margin-right: auto;
 	}
-
-		#aboutPhotoBlurbContainer
-		{
-			margin: 0px auto;
-			width: 75%;
-		}
 
 		#aboutPhoto
 		{
